--- a/src/com/teleware/plugin/ExporterDialog.form
+++ b/src/com/teleware/plugin/ExporterDialog.form
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.teleware.plugin.ExporterUI">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.teleware.plugin.ExporterDialog">
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="48" y="54" width="436" height="203"/>
+      <xy x="48" y="54" width="436" height="221"/>
     </constraints>
     <properties/>
     <border type="none"/>
@@ -65,11 +65,6 @@
               <text value="JAR路径："/>
             </properties>
           </component>
-          <vspacer id="7f39f">
-            <constraints>
-              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-            </constraints>
-          </vspacer>
           <component id="e17c2" class="javax.swing.JTextField" binding="textJarPath">
             <constraints>
               <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
@@ -132,6 +127,14 @@
             </constraints>
             <properties>
               <text value="选择"/>
+            </properties>
+          </component>
+          <component id="1263f" class="javax.swing.JButton" binding="buttonProperty">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="属性"/>
             </properties>
           </component>
         </children>
