--- a/src/com/teleware/plugin/PropertyDialog.form
+++ b/src/com/teleware/plugin/PropertyDialog.form
@@ -127,7 +127,9 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <text value=""/>
+            </properties>
           </component>
           <component id="e050f" class="javax.swing.JLabel">
             <constraints>
@@ -143,7 +145,10 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="false"/>
+            </properties>
           </component>
           <component id="24d88" class="javax.swing.JLabel">
             <constraints>
@@ -159,7 +164,10 @@
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
-            <properties/>
+            <properties>
+              <editable value="false"/>
+              <enabled value="false"/>
+            </properties>
           </component>
           <component id="8c2ae" class="javax.swing.JLabel">
             <constraints>
